syntax = "proto3";

option go_package = "github.com/feditools/login/pkg/grpc";

package feditools.login.fedi_instance;

service FediInstance {
  rpc GetFediInstance (GetFediInstanceRequest) returns (GetFediInstanceReply) {}
}

message GetFediInstanceRequest {
  int64 id = 1;
}

message GetFediInstanceReply {
  int64 id = 1;
  string domain = 2;
  string server_hostname = 3;
  string software = 4;
}
